--- a/package.json
+++ b/package.json
@@ -9,15 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.16",
+    "@types/nodemailer": "^6.4.14",
+    "framer-motion": "^10.16.5",
+    "next": "14.0.1",
+    "next-share": "^0.27.0",
+    "nodemailer": "^6.9.7",
     "react": "^18",
+    "react-animated-numbers": "^0.16.0",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-hook-form": "^7.48.2",
+    "react-icons": "^4.11.0",
+    "react-ionicons": "^4.2.1",
+    "react-type-animation": "^3.2.0",
+    "resend": "^2.0.0"
   },
   "devDependencies": {
+    "@types/react": "18.2.37",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "typescript": "5.2.2"
   }
 }
