--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "node":">=20.19.4"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
